@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash
 
 PATH=$QTDIR/bin:$PATH
 export PATH
